--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 #main-box{
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,22 +7,35 @@
     gap: 15px;
 
 }
+.flags{
+    
+}
 img{
     height: 50px ;
-    width: 50px;
+    width: 80px;
 }
 .title{
     text-align: center;
     margin-top: 30px;
     margin-bottom: 30px;
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 900;
 }
 .Codata{
+     box-shadow:  inset 5px 5px 10px 10px  rgba(0, 0, 0, 0.5),
+     inset 5px 5px 20px 10px rgba(255, 255, 255, 0.2),
+     inset -5px -5px 15px 10px rgba(22, 20, 20, 0.75);
     padding: 20px;
     width: 25rem;
-    border: 3px solid blue;
-    background-color: aquamarine;
-    border-radius: 8px;
+    /* border: 4px solid rgb(9, 91, 57); */
+    background-color: rgb(21, 60, 68);
+    border-radius: 12px;
+
+}
+.Codata:hover{
+box-shadow: 0px 0px 15px black, inset 5px 5px 10px 10px  rgba(0, 0, 0, 0.5),
+inset 5px 5px 20px 10px rgba(255, 255, 255, 0.2),
+inset -5px -5px 15px 10px rgba(22, 20, 20, 0.75);
+transition: 0.3s;
 
 }
