--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 
 }
 .flags{
-    
+    display: flex;
+    align-items: center;
 }
 img{
     height: 50px ;
@@ -20,6 +21,20 @@ img{
     margin-bottom: 30px;
     font-size: 4rem;
     font-weight: 900;
+}
+.btn{
+    font-weight: 600;
+    padding: 4px 8px;
+    font-size: 1rem;
+    display: block;
+    margin: 0 auto;
+    border-radius: 5px;
+    background-color: rgb(36, 250, 179);
+}
+.btn:hover{
+    background: transparent;
+    color:rgb(36, 250, 179) ;
+    border: 1.5px solid rgb(36, 250, 179);
 }
 .Codata{
      box-shadow:  inset 5px 5px 10px 10px  rgba(0, 0, 0, 0.5),
