--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body{
+    width: 100%;
+    height: 100%;
+}
+
+
 #main-box{
     color: #fff;
     display: flex;
@@ -5,6 +11,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 15px;
+    position: relative;
 
 }
 .flags{
@@ -53,4 +60,34 @@ inset 5px 5px 20px 10px rgba(255, 255, 255, 0.2),
 inset -5px -5px 15px 10px rgba(22, 20, 20, 0.75);
 transition: 0.3s;
 
+}
+button{
+    background-color: rgb(3, 176, 121);
+    color: #fff;
+    font-size: 1.1rem;
+    padding: 5px 10px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+#backBtn{
+    position: absolute;
+    background-color: rgb(254, 144, 18);
+    text-decoration: none;
+    padding: 0px 20px 9px;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    border: 1px solid;
+    display: none;
+   
+}
+#backBtn>span{
+    font-size: 35px;
+}
+.btnBox{
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
+gap: 3px;
 }
