--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@ button{
     border-radius: 6px;
     cursor: pointer;
 }
+#modalDiv{
+    display: non;
+}
 #backBtn{
     position: absolute;
     top: 89px;
